Idea of a LAN view controller

--- a/RetroLan/Base.lproj/Main.storyboard
+++ b/RetroLan/Base.lproj/Main.storyboard
@@ -106,6 +106,9 @@
                                 <variation key="widthClass=regular" fixedFrame="YES">
                                     <rect key="frame" x="470" y="63" width="314" height="30"/>
                                 </variation>
+                                <connections>
+                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="Wtq-e2-jZ3"/>
+                                </connections>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Pn-hk-MZe">
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
@@ -114,7 +117,41 @@
                                 <variation key="widthClass=regular" fixedFrame="YES">
                                     <rect key="frame" x="75" y="63" width="314" height="30"/>
                                 </variation>
+                                <connections>
+                                    <outlet property="delegate" destination="8rJ-Kc-sve" id="L4E-j5-HG8"/>
+                                </connections>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eUB-9t-pH3">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="CreateGame">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="584" y="126" width="87" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="createGame" destination="8rJ-Kc-sve" eventType="touchUpInside" id="iaF-ng-E59"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anO-X4-k9C">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Create Player">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="155" y="126" width="93" height="30"/>
+                                </variation>
+                                <connections>
+                                    <action selector="createPlayer" destination="8rJ-Kc-sve" eventType="touchUpInside" id="6C5-93-7o3"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBQ-ws-3gF">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <variation key="widthClass=regular" fixedFrame="YES">
+                                    <rect key="frame" x="306" y="205" width="189" height="141"/>
+                                </variation>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <variation key="default">
@@ -126,6 +163,9 @@
                                 <exclude reference="fOT-uY-axi"/>
                                 <exclude reference="w2o-KF-fZF"/>
                                 <exclude reference="7Pn-hk-MZe"/>
+                                <exclude reference="eUB-9t-pH3"/>
+                                <exclude reference="anO-X4-k9C"/>
+                                <exclude reference="MBQ-ws-3gF"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=regular">
@@ -137,10 +177,17 @@
                                 <include reference="fOT-uY-axi"/>
                                 <include reference="w2o-KF-fZF"/>
                                 <include reference="7Pn-hk-MZe"/>
+                                <include reference="eUB-9t-pH3"/>
+                                <include reference="anO-X4-k9C"/>
+                                <include reference="MBQ-ws-3gF"/>
                             </mask>
                         </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <connections>
+                        <outlet property="gameTextField" destination="w2o-KF-fZF" id="UU7-wh-eIA"/>
+                        <outlet property="playerTextField" destination="7Pn-hk-MZe" id="fvl-pl-Nu5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
